# xinux-relago

./: .gitignore  Cargo.toml  default.nix  flake.nix  module.nix  readme.md  shell.nix
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/daemon/src/: journal.rs
crates/gui/src/window/: report.rs
crates/nixlog/src/: error.rs
crates/notify/src/: lib.rs
crates/report/src/: info.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
